--- a/converterframe.html
+++ b/converterframe.html
@@ -15,7 +15,9 @@
         }
 
         .container {
-            width: 98%;
+            width: 100%;
+            max-width: 1200px;
+            margin: auto;
             display: flex;
             flex-wrap: wrap;
 
